edition = "2023";  // successor to proto2 and proto3

package storage;

import "storage/image_integration.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;

// Next Tag: 5
message OrchestratorIntegration {
  string id = 1;
  string name = 2;
  string type = 3;

  oneof IntegrationConfig {
    ClairifyConfig clairify = 4;
  }
}
